<resources>
    <string name="app_name">My Application</string>
    <string name="wel">Welcome to Paperclip</string>
    <string name="O">OTP</string>
    <string name="send">We will send you (OTP) on this given mobile number.</string>
    <string name="ent">Enter your mobile number</string>
    <string name="random">96XXXXXXX3</string>
    <string name="get_otp">GET OTP</string>
    <string name="paperclip">Paperclip</string>
    <string name="new_here_don_t_worry_just_paperclip">New Here ~ Don\'t Worry ~ Just Paperclip</string>
    <string name="please_enter_the_otp">Please enter the OTP</string>
    <string name="verifi">Verifi</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_6_digit_otp">6 digit OTP</string>
    <string name="hello">Hello..!</string>
    <string name="sing_in">Sing in</string>
    <string name="log_in">Log in</string>
    <string name="password">PASSWORD</string>
    <string name="user_id">USER-ID</string>
    <string name="login">Login</string>
    <string name="jbb">New</string>

    <string name="submit">Submit</string>
    <string name="title_activity_displayinfo">Displayinfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="demo">Demo</string>
    <string name="create_password">Create Password</string>
    <string name="enter_your_password_for_your_new_paperclipa_server_provider_account">Enter your password for your new Paperclipa server provider account</string>
    <string name="passwordd">Password</string>
    <string name="submitt">SUBMIT</string>
    <string name="confirm">Confirm</string>
    <string name="sing_up">sing UP</string>
    <string name="fghj">Pin code</string>
    <string name="dfgvbhn">General Information</string>
    <string name="sxdcvb">Shop name</string>
    <string name="xcvbnm">Owner name</string>
    <string name="gbn">Contract number</string>
    <string name="dcfvbn">Address</string>
    <string name="xdfcgvhb">Submit</string>
    <string name="ghn">Catagory</string>


    <string-array name="cat">
        <item>---Select---</item>
        <item>Grocery store</item>
        <item>Pet shop</item>
        <item>Plumber</item>
        <item>Carpenter</item>
    </string-array>

    <string-array name="pincode">
        <item>---Select---</item>
        <item>721301</item>
        <item>713321</item>
        <item>713217</item>
        <item>722055</item>
        <item>700042</item>
    </string-array>
</resources>
