<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Singup"
    android:scrollbars="none"
    android:background="@drawable/backg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/wel"
            android:textColor="#0E0E0E"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="149dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/send" />

        <TextView
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/send"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ent"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/baloo_chettan"
            android:layout_marginTop="10dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bgbox">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+91"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_num"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/random"
                android:background="@null"
                android:imeOptions="actionDone"

                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                />
    </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/otp_bot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/get_otp"
                android:textSize="20sp"
                android:fontFamily="@font/baloo_chettan"
                android:background="@drawable/bgbot"
                android:layout_margin="40dp"/>



            <ProgressBar
                android:id="@+id/prgbar_singin"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>
</ScrollView>
