<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/backg"
    android:scrollbars="none"
    tools:context=".Createpassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/create_password"
            android:textColor="#0E0E0E"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textStyle="bold" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_password_for_your_new_paperclipa_server_provider_account"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:fontFamily="@font/baloo_chettan"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_margin="10dp">
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/passwordd"
            android:textSize="20dp"
            android:background="@drawable/bgbox"
            android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_margin="10dp">

            <EditText
                android:layout_marginTop="2dp"
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm"
                android:textSize="20dp"
                android:background="@drawable/bgbox"
                android:inputType="numberPassword"/>

    </com.google.android.material.textfield.TextInputLayout>



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">


            <Button
                android:id="@+id/submit_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bgbot"
                android:fontFamily="@font/baloo_chettan"
                android:text="@string/submitt"
                android:textAlignment="center"
                android:textSize="20sp" />



            <ProgressBar
                android:id="@+id/prgbar_createpass"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please enter the password of only 5 digit (example-85695)"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:fontFamily="@font/baloo_chettan"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</ScrollView>





