<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info"
    android:background="@drawable/backg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/dfgvbhn"
            android:textColor="#0E0E0E"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold" />


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/sxdcvb"
            android:textColor="#0E0E0E"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bgbox">

            <EditText
                android:id="@+id/shopname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/xcvbnm"
            android:textColor="#0E0E0E"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bgbox">

            <EditText
                android:id="@+id/ownname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:text="Alternate Phone number"
            android:textColor="#0E0E0E"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bgbox">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+91-"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobnum"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/ghn"
            android:textColor="#0E0E0E"
            android:textSize="30sp"/>
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/bgbox">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spincat"
            android:textSize="20dp"
            android:textStyle="bold"/>


    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/baloo_chettan"
            android:text="Shop address"
            android:textColor="#0E0E0E"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bgbox">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/fghj"
            android:textColor="#0E0E0E"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bgbox">

            <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinpin"
            android:textSize="20dp"
            android:textStyle="bold"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/smit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="@drawable/bgbot"
                android:fontFamily="@font/baloo_chettan"
                android:text="@string/xdfcgvhb"
                android:textAlignment="center"
                android:textSize="20sp" />



            <ProgressBar
                android:id="@+id/prgbarinfo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>
</ScrollView>
